Week Two Challanges/apexexample/force-app/main/default/objects/Class__c/fields/Assigned_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Teacher</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <valueField>User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>