Week Two Challanges/apexexample/force-app/main/default/objects/Class__c/fields/Enroll_Min__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Min__c</fullName>
    <formula>IF( Student_Enrolled__c  &gt; 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enroll Min</label>
    <type>Checkbox</type>
</CustomField>