Week Two Challanges/apexexample/force-app/main/default/objects/Class__c/fields/Student_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Student_Enrolled__c</fullName>
    <label>Student Enrolled</label>
    <summaryFilterItems>
        <field>Class_Roster__c.Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </summaryFilterItems>
    <summaryForeignKey>Class_Roster__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>